<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/scores_header">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/winsloseties_header"
                android:layout_marginBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/emptyspace"
                    android:paddingLeft="5dp"/>

                <TextView
                    android:text="@string/wins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:id="@+id/wins_header" />

                <TextView
                    android:text="@string/losses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:id="@+id/losses_header" />

                <TextView
                    android:text="@string/ties"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:id="@+id/ties_header" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/p1_row"
                android:layout_marginBottom="10dp">

                <TextView
                    android:text="@string/player1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"/>

                <TextView
                    android:id="@+id/p1_wins"
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:layout_weight="2"
                    android:gravity="right"
                     />

                <TextView
                    android:id="@+id/p1_losses"
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:layout_weight="2"
                    android:gravity="right"/>

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p1_ties"
                    android:paddingRight="10dp"
                    android:layout_weight="2"
                    android:gravity="right"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/p2_row"
                android:layout_marginBottom="10dp">

                <TextView
                    android:text="@string/player2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p2_wins"
                    android:paddingRight="10dp"
                    android:layout_weight="2"
                    android:gravity="right"/>

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p2_losses"
                    android:paddingRight="10dp"
                    android:layout_weight="2"
                    android:gravity="right"/>

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p2_ties"
                    android:paddingRight="10dp"
                    android:layout_weight="2"
                    android:gravity="right"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/cpu_row">

                <TextView
                    android:text="@string/cpu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cpu_wins"
                    android:paddingRight="10dp"
                    android:layout_weight="2"
                    android:gravity="right"/>

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cpu_losses"
                    android:paddingRight="10dp"
                    android:layout_weight="2"
                    android:gravity="right"/>

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cpu_ties"
                    android:paddingRight="10dp"
                    android:layout_weight="2"
                    android:gravity="right"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>